--- a/be-twitter/package.json
+++ b/be-twitter/package.json
@@ -32,10 +32,12 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "@types/jsonwebtoken": "^9.0.5",
     "cross-env": "^7.0.3",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.3.0"
   }
 }
