chức năng Register và fix bug login

--- a/be-twitter/.env.development
+++ b/be-twitter/.env.development
@@ -13,10 +13,10 @@ DB_BOOKMARKS_COLLECTION='bookmarks'
 DB_LIKES_COLLECTION='likes'
 DB_CONVERSATION_COLLECTION='conversations'
 PASSWORD_SECRET='@twitter@'
-JWT_SECRET_ACCESS_TOKEN='12344321!@#AT'
-JWT_SECRET_REFRESH_TOKEN='12344321!@#RT'
-JWT_SECRET_EMAIL_VERIFY_TOKEN='12344321!@#EVT'
-JWT_SECRET_FORGOT_PASSWORD_TOKEN='12344321!@#FPT'
+JWT_SECRET_ACCESS_TOKEN='twitter@AT123'
+JWT_SECRET_REFRESH_TOKEN='twitter@RT123'
+JWT_SECRET_EMAIL_VERIFY_TOKEN='twitter@EVT123'
+JWT_SECRET_FORGOT_PASSWORD_TOKEN='twitter@FPT123'
 # Nếu expireIn là số thì sẽ tính là giây
 # Nếu expireIn là string thì phải quy định 'm', 'h', 'd', 'w', không quy định tính theo mili giây
 REFRESH_TOKEN_EXPIRES_IN='100d'
