--- a/be-twitter/vercel.json
+++ b/be-twitter/vercel.json
@@ -1,15 +1,12 @@
 {
-  "version": 2,
-  "builds": [
-    {
-      "src": "dist/index.js",
-      "use": "@now/node"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "index.ts"
-    }
-  ]
+  "framework": "express",
+  "target": "serverless",
+  "build": {
+    "ignore": [
+      "**/*.spec.ts"
+    ]
+  },
+  "functions": {
+    "api": ["src/api/**/*.ts"]
+  }
 }
