--- a/be-twitter/package.json
+++ b/be-twitter/package.json
@@ -39,17 +39,24 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.478.0",
     "@aws-sdk/client-ses": "^3.474.0",
+    "@aws-sdk/lib-storage": "^3.478.0",
+    "@types/formidable": "^3.4.5",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/lodash": "^4.14.202",
+    "@types/mime": "^3.0.4",
     "axios": "^1.6.2",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
+    "formidable": "^3.5.1",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
-    "mongodb": "^6.3.0"
+    "mime": "^3.0.0",
+    "mongodb": "^6.3.0",
+    "sharp": "^0.32.6"
   }
 }
