--- a/be-twitter/package.json
+++ b/be-twitter/package.json
@@ -57,6 +57,7 @@
     "lodash": "^4.17.21",
     "mime": "^3.0.0",
     "mongodb": "^6.3.0",
+    "nanoid": "^5.0.4",
     "sharp": "^0.32.6"
   }
 }
