--- a/fe-twitter/tsconfig.node.json
+++ b/fe-twitter/tsconfig.node.json
@@ -1,10 +1,11 @@
 {
   "compilerOptions": {
     "composite": true,
-    "skipLibCheck": true,
     "module": "ESNext",
-    "moduleResolution": "bundler",
-    "allowSyntheticDefaultImports": true
+    "moduleResolution": "Node",
+    "target": "ES2015"
+    // "skipLibCheck": true,
+    // "allowSyntheticDefaultImports": true
   },
   "include": ["vite.config.ts"]
 }
