--- a/fe-twitter/package.json
+++ b/fe-twitter/package.json
@@ -12,12 +12,14 @@
     "prettier:fix": "prettier --write ."
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.17.9",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-icons": "^5.0.1",
+    "react-router-dom": "^6.21.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
-    "@types/react-dom": "^18.2.17",
+    "@types/react-dom": "^18.2.18",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
