--- a/fe-twitter/package.json
+++ b/fe-twitter/package.json
@@ -13,9 +13,14 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.17.9",
+    "axios": "^1.6.5",
     "react": "^18.2.0",
+    "react-hook-form": "^7.49.3",
     "react-icons": "^5.0.1",
-    "react-router-dom": "^6.21.2"
+    "react-router-dom": "^6.21.2",
+    "react-toastify": "^9.1.3",
+    "yup": "^1.3.3",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
