--- a/fe-twitter/package.json
+++ b/fe-twitter/package.json
@@ -12,6 +12,7 @@
     "prettier:fix": "prettier --write ."
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
     "@tanstack/react-query": "^5.17.9",
     "axios": "^1.6.5",
     "react": "^18.2.0",
