--- a/fe-twitter/package.json
+++ b/fe-twitter/package.json
@@ -15,6 +15,7 @@
     "@hookform/resolvers": "^3.3.4",
     "@tanstack/react-query": "^5.17.9",
     "axios": "^1.6.5",
+    "classnames": "^2.5.1",
     "react": "^18.2.0",
     "react-hook-form": "^7.49.3",
     "react-icons": "^5.0.1",
