--- a/fe-twitter/package.json
+++ b/fe-twitter/package.json
@@ -21,6 +21,7 @@
     "react-icons": "^5.0.1",
     "react-infinite-scroll-component": "^6.1.0",
     "react-router-dom": "^6.21.2",
+    "react-tailwindcss-datepicker": "^1.6.6",
     "react-toastify": "^9.1.3",
     "yup": "^1.3.3",
     "zustand": "^4.4.7"
