--- a/be-twitter/package.json
+++ b/be-twitter/package.json
@@ -58,6 +58,11 @@
     "mime": "^3.0.0",
     "mongodb": "^6.3.0",
     "nanoid": "^5.0.4",
-    "sharp": "^0.32.6"
+    "sharp": "^0.32.6",
+    "socket.io": "^4.7.5"
+  },
+  "optionalDependencies": {
+    "bufferutil": "^4.0.8",
+    "utf-8-validate": "^5.0.10"
   }
 }
