--- a/fe-twitter/package.json
+++ b/fe-twitter/package.json
@@ -23,6 +23,7 @@
     "react-router-dom": "^6.21.2",
     "react-tailwindcss-datepicker": "^1.6.6",
     "react-toastify": "^9.1.3",
+    "socket.io-client": "^4.7.5",
     "yup": "^1.3.3",
     "zustand": "^4.4.7"
   },
