--- a/fe-twitter/tsconfig.node.json
+++ b/fe-twitter/tsconfig.node.json
@@ -3,9 +3,9 @@
     "composite": true,
     "module": "ESNext",
     "moduleResolution": "Node",
-    "target": "ES2015"
-    // "skipLibCheck": true,
-    // "allowSyntheticDefaultImports": true
+    "target": "ES2015",
+    "skipLibCheck": true,
+    "allowSyntheticDefaultImports": true
   },
   "include": ["vite.config.ts"]
 }
