--- a/be-twitter/.env.development
+++ b/be-twitter/.env.development
@@ -20,7 +20,7 @@ JWT_SECRET_FORGOT_PASSWORD_TOKEN='twitter@FPT123'
 # Nếu expireIn là số thì sẽ tính là giây
 # Nếu expireIn là string thì phải quy định 'm', 'h', 'd', 'w', không quy định tính theo mili giây
 REFRESH_TOKEN_EXPIRES_IN='100d'
-ACCESS_TOKEN_EXPIRES_IN='5m'
+ACCESS_TOKEN_EXPIRES_IN='1h'
 EMAIL_VERIFY_TOKEN_EXPIRES_IN='7d'
 FORGOT_PASSWORD_TOKEN_EXPIRES_IN='7d'
 
