--- a/fe-twitter/package.json
+++ b/fe-twitter/package.json
@@ -15,9 +15,12 @@
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
     "@tanstack/react-query": "^5.17.9",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/react-helmet": "^6.1.11",
     "axios": "^1.6.5",
     "classnames": "^2.5.1",
+    "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.49.3",
