--- a/be-twitter/package.json
+++ b/be-twitter/package.json
@@ -58,6 +58,7 @@
     "mime": "^3.0.0",
     "mongodb": "^6.3.0",
     "nanoid": "^5.0.4",
+    "node-cron": "^3.0.3",
     "sharp": "^0.32.6",
     "socket.io": "^4.7.5"
   },
